--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "jodit-react": "^5.2.26",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
