--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.14",
     "typescript": "^5"
   },
