--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Ihamrick", "Ihamrickadmindashboardtoken"]
+  "cSpell.words": ["Hamrick", "Ihamrick", "Ihamrickadmindashboardtoken"]
 }
